Added images and added some qol/fixes agian

--- a/index.html
+++ b/index.html
@@ -40,15 +40,63 @@
       <section id="section-2" class="section">
         <div class="timeline">
           <div class="timeline-tabs" role="tablist" aria-label="Experience Tabs">
-            <button class="tab active" role="tab" aria-selected="true" data-target="#edu">Education</button>
+            <button class="tab active" role="tab" aria-selected="true" data-target="#skills">Skills</button>
             <button class="tab" role="tab" aria-selected="false" data-target="#work">Work</button>
-            <button class="tab" role="tab" aria-selected="false" data-target="#skills">Skills</button>
+            <button class="tab" role="tab" aria-selected="false" data-target="#edu">Education</button>
           </div>
           <div class="timeline-panels">
-            <div id="edu" class="panel active" role="tabpanel">
+            <div id="skills" class="panel is-skills active" role="tabpanel">
               <article class="card">
                 <div class="card-header">
                   <div class="dot"></div>
+                  <div class="meta">
+                    <h3 class="title"><span class="icon-slot"><img src="Images/experience/linux.png" alt="" /></span>Linux</h3>
+                    <div class="sub">Daily driver; comfortable on servers and CLI.</div>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card-header">
+                  <div class="dot"></div>
+                  <div class="meta">
+                    <h3 class="title"><span class="icon-slot"><img src="Images/experience/docker.png" alt="" /></span>Docker</h3>
+                    <div class="sub">Compose setups; containerized services for projects.</div>
+                  </div>
+                </div>
+              </article>
+              <article class="card">
+                <div class="card-header">
+                  <div class="dot"></div>
+                  <div class="meta">
+                    <h3 class="title"><span class="icon-slot"><img src="Images/experience/git.png" alt="" /></span>Git & GitHub</h3>
+                    <div class="sub">Branching, PRs, issues; small automation.</div>
+                  </div>
+                </div>
+              </article>
+            </div>
+            <div id="work" class="panel" role="tabpanel" hidden>
+              <article class="card">
+                <div class="card-header">
+                  <div class="dot"></div>
+                  <img class="img-slot" src="Images/experience/freelancedevelopment.png" alt="Freelance Development" />
+                  <div class="meta">
+                    <h3 class="title">Freelance Development <span class="dates-inline">2022 → Now</span></h3>
+                    <div class="sub sub-centered">Roblox systems • Discord bots • Minecraft mods • automation</div>
+                  </div>
+                </div>
+                <ul class="bullets">
+                  <li><b>Roblox systems</b>: gameplay logic, UI flows, and moderation tooling.</li>
+                  <li><b>Process</b>: fast iteration, clear communication, on-time delivery.</li>
+                  <li><b>Scope</b>: hundreds of clients across gaming and community tooling.</li>
+                  <li><b>Stack</b>: Discord bots, Minecraft mods, small web automations.</li>
+                </ul>
+              </article>
+            </div>
+            <div id="edu" class="panel" role="tabpanel" hidden>
+              <article class="card">
+                <div class="card-header">
+                  <div class="dot"></div>
+                  <img class="img-slot" src="Images/experience/aes.png" alt="Acton Elementary" />
                   <div class="meta">
                     <h3 class="title">Acton Elementary School <span class="dates-inline">2017 – 2024</span></h3>
                     <div class="sub">Pre‑K → 7th grade (skipped 8th)</div>
@@ -62,6 +110,7 @@
               <article class="card">
                 <div class="card-header">
                   <div class="dot"></div>
+                  <img class="img-slot" src="Images/experience/uhns.png" alt="University of Nebraska High School" />
                   <div class="meta">
                     <h3 class="title">University of Nebraska High School <span class="dates-inline">2025 – present</span></h3>
                     <div class="sub">Independent, online high school program</div>
@@ -70,63 +119,6 @@
                 <ul class="bullets">
                   <li><b>Coursework</b>: Accelerated schedule while continuing personal engineering projects.</li>
                 </ul>
-              </article>
-            </div>
-            <div id="work" class="panel" role="tabpanel" hidden>
-              <article class="card">
-                <div class="card-header">
-                  <div class="dot"></div>
-                  <div class="meta">
-                    <h3 class="title">Roblox Freelance Development <span class="dates-inline">Early</span></h3>
-                    <div class="sub">Gameplay systems, UI, and moderation tools</div>
-                  </div>
-                </div>
-                <ul class="bullets">
-                  <li><b>Roblox systems</b>: gameplay logic, UI flows, and moderation tooling.</li>
-                  <li><b>Process</b>: fast iteration, clear communication, on-time delivery.</li>
-                </ul>
-              </article>
-              <article class="card">
-                <div class="card-header">
-                  <div class="dot"></div>
-                  <div class="meta">
-                    <h3 class="title">Freelance Developer — Expanded <span class="dates-inline">Now</span></h3>
-                    <div class="sub">Discord bots • Minecraft mods • automation</div>
-                  </div>
-                </div>
-                <ul class="bullets">
-                  <li><b>Scope</b>: hundreds of clients across gaming and community tooling.</li>
-                  <li><b>Stack</b>: Discord bots, Minecraft mods, small web automations.</li>
-                </ul>
-              </article>
-            </div>
-            <div id="skills" class="panel is-skills" role="tabpanel" hidden>
-              <article class="card">
-                <div class="card-header">
-                  <div class="dot"></div>
-                  <div class="meta">
-                    <h3 class="title"><span class="icon-slot" aria-hidden="true"></span>Linux</h3>
-                    <div class="sub">Daily driver; comfortable on servers and CLI.</div>
-                  </div>
-                </div>
-              </article>
-              <article class="card">
-                <div class="card-header">
-                  <div class="dot"></div>
-                  <div class="meta">
-                    <h3 class="title"><span class="icon-slot" aria-hidden="true"></span>Docker</h3>
-                    <div class="sub">Compose setups; containerized services for projects.</div>
-                  </div>
-                </div>
-              </article>
-              <article class="card">
-                <div class="card-header">
-                  <div class="dot"></div>
-                  <div class="meta">
-                    <h3 class="title"><span class="icon-slot" aria-hidden="true"></span>Git & GitHub</h3>
-                    <div class="sub">Branching, PRs, issues; small automation.</div>
-                  </div>
-                </div>
               </article>
             </div>
           </div>
@@ -143,7 +135,7 @@
             <a href="https://discord.com/users/1131239669225488476" class="icon-btn" target="_blank" rel="noopener noreferrer" aria-label="Discord">
               <img src="Images/footer/discord.png" alt="" />
             </a>
-            <a href="https://github.com/junrhobart" class="icon-btn" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+            <a href="https://github.com/junerhobart" class="icon-btn" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
               <img src="Images/footer/github.png" alt="" />
             </a>
           </div>
@@ -159,18 +151,21 @@
         });
 
         const links = Array.from(document.querySelectorAll('.toc a'));
-        const sections = links
-          .map(a => document.querySelector(a.getAttribute('href')))
-          .filter(Boolean);
-        const observer = new IntersectionObserver((entries) => {
-          entries.forEach(entry => {
-            if (entry.isIntersecting) {
-              const id = '#' + entry.target.id;
-              links.forEach(l => l.classList.toggle('active', l.getAttribute('href') === id));
-            }
-          });
-        }, { rootMargin: '-12% 0px -70% 0px', threshold: 0 });
-        sections.forEach(s => s && observer.observe(s));
+        const sections = links.map(a => document.querySelector(a.getAttribute('href'))).filter(Boolean);
+
+        function setActiveByViewport() {
+          const y = window.scrollY + 120; // top reference line
+          let activeId = '#top';
+          for (const s of sections) {
+            const top = s.offsetTop;
+            const bottom = top + s.offsetHeight;
+            if (y >= top && y < bottom) { activeId = '#' + s.id; break; }
+          }
+          links.forEach(l => l.classList.toggle('active', l.getAttribute('href') === activeId));
+        }
+        setActiveByViewport();
+        window.addEventListener('scroll', setActiveByViewport, { passive: true });
+        window.addEventListener('resize', setActiveByViewport);
 
         function activateTopIfAtTop() {
           if (window.scrollY <= 2) {
