Added some extra animations and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       })();
     </script>
     <script>
-      // Tabs behaviour for the timeline
+      // Tabs behaviour for the timeline (reverted to stable version)
       (function(){
         const container = document.querySelector('.timeline');
         if (!container) return;
